--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </div>
 
         <button id="gen-form">Add toDo </button>
+        <input type="text" id="searchTerm" placeholder="search for to dos?">
 
         
         <script src="todoFunctions.js" ></script>
